Fix non-functioning form autocomplete (bug 212220).  Instead of using an attribute on the nsIAutoCompleteInput (since it's not always a content node), add an attribute to the IDL interface.  Also, make use of JS's (a || b) semantics to avoid some temporary variables.  r=hewitt.